<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/reflect_infor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:text="@string/reflect_infor_title"
         />

    <EditText
        android:id="@+id/reflect_infor_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reflect_infor_input" 
        android:lines="15"
        android:singleLine="false"
        >

       
    </EditText>

<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
        android:id="@+id/reflect_infor_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reflect_infor_OK" />

      
    </LinearLayout>
    

</LinearLayout>
